# bgtu-oop

./: .gitignore  CMakeLists.txt  build.gradle.kts  rc.cpp
default_application_logic/include/LdH/studying/bgtu/oop/: default_application_logic.hpp
default_application_logic/src/: implementation.cpp
demo/src/: callback_wrappers.cpp  callback_wrappers.hpp  canvas.cpp  canvas.hpp  main.cpp  py_utilities.cpp  py_utilities.hpp  widgets.py  widgets_py.hpp
fun_expression_parser/include/LdH/studying/bgtu/oop/: fun_expression_parser.hpp
fun_expression_parser/src/: expressions.hpp  implementation.cpp
interface/include/LdH/studying/bgtu/oop/: application.hpp  canvas.hpp  expression.hpp  parser.hpp
interface/src/: destructors.cpp
src/browserMain/kotlin/ru/landgrafhomyak/studying/bgtu/oop/platform/: CanvasProviderImpl.kt  ParamsController.kt  main.kt
src/browserMain/static/: common.css  index.html
src/commonMain/kotlin/ru/landgrafhomyak/studying/bgtu/oop/: Application.kt
src/commonMain/kotlin/ru/landgrafhomyak/studying/bgtu/oop/expressions/: ConstantOperand.kt  Expression.kt  ExpressionContext.kt  ExpressionContextWithParameters.kt  ParameterOperand.kt
src/commonMain/kotlin/ru/landgrafhomyak/studying/bgtu/oop/expressions/operators/: AddExpression.kt  DivExpression.kt  MulExpression.kt  NegExpression.kt  PowExpression.kt  SubExpression.kt
src/commonMain/kotlin/ru/landgrafhomyak/studying/bgtu/oop/parser/: FunExpressionParser.kt  Parser.kt
src/commonMain/kotlin/ru/landgrafhomyak/studying/bgtu/oop/ui/: ApplicationCallbacks.kt  CanvasConfiguration.kt  CanvasProvider.kt  Plot.kt
